Adding cockpit and updating password

--- a/templates/hypervisor/ks.cfg.j2
+++ b/templates/hypervisor/ks.cfg.j2
@@ -44,6 +44,11 @@ logvol swap --name=lv_swap --vgname=VolGroup --size=2016
 # Packages selection (%packages section is required)
 %packages --nobase
 @core --nodefaults
+cockpit
+cockpit-dashboard
+cockpit-shell
+cockpit-system
+cockpit-ws
 %end
 
 reboot --eject
