--- a/templates/hypervisor/ks.cfg-tower.j2
+++ b/templates/hypervisor/ks.cfg-tower.j2
@@ -14,8 +14,6 @@ authconfig --enableshadow --passalgo=sha512
 selinux --enforcing
 timezone --utc America/New_York
 
-services --enabled=cockpit.socket
-
 # Plaintext password is: password
 bootloader --location=mbr --append="crashkernel=auto rhgb quiet" --password={{ password_grub2 }}
 
@@ -48,9 +46,18 @@ logvol swap --name=lv_swap --vgname=VolGroup --size=2016
 %packages --nobase
 @core --nodefaults
 ansible
+git
 cockpit
+cockpit-shell
 cockpit-system
 cockpit-ws
+nano
+vim-enhanced
+%end
+
+%post
+rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release
+systemctl enable cockpit.socket
 %end
 
 reboot --eject
