Updated to correct SELinux permission issue

--- a/templates/workshop-docs/index.html.j2
+++ b/templates/workshop-docs/index.html.j2
@@ -3,6 +3,7 @@
 <style>
   preformatted, code {}
   preformatted {display:block;white-space:pre-wrap;font-family:'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace; }
+  body {font-family: overpass, sans-serif;}
 </style>
 <h1>Ansible Tower Workshop</h1>
 <h3>Today's Agenda</h3>
