Add table to outline internal VM layout to workshop docs Add tag to skip reposync and createrepo

--- a/templates/workshop-docs/index.html.j2
+++ b/templates/workshop-docs/index.html.j2
@@ -143,7 +143,7 @@ Each student's personal lab is equipped with the following:
 
 <p>Log into your Tower instance via <b>cockpit</b></p>
 
-<h5>Tower</h5>
+<p>{{ workshopdocssetup }}</p>
 
 <table>
 <tr>
