Corrected spelling issue

--- a/templates/workshop-docs/index.html.j2
+++ b/templates/workshop-docs/index.html.j2
@@ -1514,7 +1514,7 @@ sudo bash ./setup.sh
 
 <h3>Configuring Ansible Tower</h3>
 
-<p>re are a number of contructs in the Ansible Tower UI that enable multi-tenancy, notifications, scheduling, etc. However, we are only going to focus on a few of the key contructs that are required for this workshop today.</p>
+<p>There are a number of contructs in the Ansible Tower UI that enable multi-tenancy, notifications, scheduling, etc. However, we are only going to focus on a few of the key contructs that are required for this workshop today.</p>
 
 <ul>
 <li>Credentials
