--- a/templates/workshop-docs/index.html.j2
+++ b/templates/workshop-docs/index.html.j2
@@ -1660,7 +1660,7 @@ curl -k https://tower-1/api/v1/config/ \
 
 <p>Select SAVE</p>
 
-<h3>Creating a Inventory</h3>
+<h3>Creating an Inventory</h3>
 
 <p>An inventory is a collection of hosts against which jobs may be launched. Inventories are divided into groups and these groups contain the actual hosts. Groups may be sourced manually, by entering host names into Tower, or from one of Ansible Tower's supported cloud providers.</p>
 
