Documentation updated to resize picture

--- a/templates/workshop-docs/index.html.j2
+++ b/templates/workshop-docs/index.html.j2
@@ -616,7 +616,7 @@ In standard output, you should see something that looks very similar to the foll
 </p>
 
 <p>
-<img src="ansible_output.png"><br>
+<img src="ansible_output.png" width=50% height=auto><br>
 <i>Figure 1: apache_basic playbook stdout</i>
 </p>
 
