Updated documentation for Section 3

--- a/templates/workshop-docs/index.html.j2
+++ b/templates/workshop-docs/index.html.j2
@@ -2035,15 +2035,15 @@ git push origin master
 <h4>Step 3:</h4>
 
 <p>Enter the following values into your new project. Note that the <b>PLAYBOOK DIRECTORY</b> item should show <b>playbooks</b>, as an option, when you click on it.</p>
-
+<p><b><i>Example for user1 using node-1</i></b></p>
 <table border=1>
 <tr><td>NAME</td><td>NIST 800-53 and DISA STIG</td></tr>
 <tr><td>DESCRIPTION</td><td>Security Project</td></tr>
 <tr><td>ORGANIZATION</td><td>Default</td></tr>
-<tr><td>SCM TYPE</td><td>Manual</td></tr>
-<tr><td>PROJECT BASE PATH</td><td>/var/lib/awx/projects</td></tr>
-<tr><td>PLAYBOOK DIRECTORY</td><td>playbooks</td></tr>
+<tr><td>SCM TYPE</td><td>Git</td></tr>
+<tr><td>SCM URL</td><td>git://192.168.2.248/section_3.0/node-1/</td></tr>
 </table>
+<p><img src="spscm.png" width=50% height=auto></p>
 
 <h4>Step 4:</h4>
 
