Updated Section to use JINJA for field replacement

--- a/templates/workshop-docs/index.html.j2
+++ b/templates/workshop-docs/index.html.j2
@@ -2041,7 +2041,7 @@ git push origin master
 <tr><td>DESCRIPTION</td><td>Security Project</td></tr>
 <tr><td>ORGANIZATION</td><td>Default</td></tr>
 <tr><td>SCM TYPE</td><td>Git</td></tr>
-<tr><td>SCM URL</td><td>git://192.168.2.248/section_3.0/node-1/</td></tr>
+<tr><td>SCM URL</td><td>git://{{ kvm_private_network_ip }}/section_3.0/node-1/</td></tr>
 </table>
 <p><img src="spscm.png" width=50% height=auto></p>
 
