Added instruction to save Ansible Tower credential, explicitly.

--- a/templates/workshop-docs/index.html.j2
+++ b/templates/workshop-docs/index.html.j2
@@ -1624,6 +1624,10 @@ curl -k https://tower-1/api/v1/config/ \
 <p><img src="cred.png" width=50% height=auto><br>
 <i>Figure 5: Adding a Credential</i></p>
 
+<h4>Step 5:</h4>
+
+<p>Select SAVE</p>
+
 <h4>Step 1:</h4>
 
 <p>Click on PROJECTS</p>
